# ocr-detection

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  test_basic.py
.github/workflows/: README.md  ci-cd.yml  lint.yml  release.yml  test.yml
examples/: base64_image_example.py  demo_new_defaults.py  performance_usage.py  simple_usage.py
src/ocr_detection/: __init__.py  _analyzer.py  _detector.py  analyzer.py  api.py  cli.py  detector.py  simple.py
tests/: __init__.py  conftest.py  create_test_pdf.py  test_analyzer.py  test_base64_images.py  test_basic_functionality.py  test_cli.py  test_detector.py  test_integration.py  test_integration_advanced.py  test_integration_basic.py  test_ocr_scenarios.py  test_simple_api.py
